--- a/20150916_OGC_Reuse_under_licence/20150916_OGC_Reuse_under_licence.ipynb
+++ b/20150916_OGC_Reuse_under_licence/20150916_OGC_Reuse_under_licence.ipynb
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -120,7 +120,7 @@
        "0"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -139,16 +139,21 @@
     "\n",
     "### Export this notebook and the document header as PDF using Pandoc\n",
     "\n",
-    "commandLineSyntax = 'pandoc  -f markdown -t latex -N -V geometry:margin=1in DocumentHeader.md 20150916_OGC_Reuse_under_licence.md --filter pandoc-citeproc  --latex-engine=xelatex --toc -o 20150916_OGC_Reuse_under_licence.pdf '\n",
+    "commandLineSyntax = 'pandoc  -f markdown -t latex -N -V geometry:margin=1in DocumentHeader.md 20150916_OGC_Reuse_under_licence.md --filter pandoc-citeproc  --latex-engine=xelatex --toc -o interim.pdf '\n",
     "\n",
     "os.system(commandLineSyntax)\n",
     "\n",
     "### Remove cruft from the pdf\n",
     "\n",
-    "commandLineSyntax = 'pdftk 20150916_OGC_Reuse_under_licence.pdf cat 1-4 15-end output outfile_p12-15.pdf'\n",
+    "commandLineSyntax = 'pdftk interim.pdf cat 1-3 16-end output 20150916_OGC_Reuse_under_licence.pdf'\n",
     "\n",
     "os.system(commandLineSyntax)\n",
-    "\n"
+    "\n",
+    "### Remove the interim pdf\n",
+    "\n",
+    "commandLineSyntax = 'rm interim.pdf'\n",
+    "\n",
+    "os.system(commandLineSyntax)\n"
    ]
   },
   {
@@ -788,6 +793,17 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "source": [
+    "\\newpage"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
      "slide_type": "slide"
     }
    },
@@ -800,7 +816,11 @@
     "\n",
     "* Research Fellow, University of Nottingham: [orcid](http://orcid.org/0000-0002-2991-811X)\n",
     "* Director, Geolytics Limited - A spatial data analytics consultancy\n",
-    "\n"
+    "\n",
+    "## About this presentation\n",
+    "\n",
+    "* [Available on GitHub](https://github.com/AntArch/Presentations_Github/tree/master/20150916_OGC_Reuse_under_licence) - https://github.com/AntArch/Presentations_Github/\n",
+    "* [Fully referenced PDF](https://github.com/AntArch/Presentations_Github/blob/master/20150916_OGC_Reuse_under_licence/20150916_OGC_Reuse_under_licence.pdf)\n"
    ]
   },
   {
@@ -1667,6 +1687,8 @@
     "* Would need to decouple licence incompatibility from licence name into licence clause (see table below)\n",
     "* Deal with all licence type\n",
     "* Provide recommendations based on desired derivative licence type\n",
+    "* Link this through to the type of process in a workflow:\n",
+    "    * data derivation is, from a licence position, very different to contextual display\n",
     "* etc..... for discussion?\n",
     "\n",
     "License|Reproduction|Distribution|Derivation|ND|BY|SA|NC\n",
