Added slides and pdf

--- a/20151008_OpenGeo_Reuse_under_licence/20151008_OpenGeo_Reuse_under_licence.ipynb
+++ b/20151008_OpenGeo_Reuse_under_licence/20151008_OpenGeo_Reuse_under_licence.ipynb
@@ -111,6 +111,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "ipython nbconvert --to markdown 20151008_OpenGeo_Reuse_under_licence.ipynb\n",
       "ipython nbconvert --to markdown 20151008_OpenGeo_Reuse_under_licence.ipynb\n"
      ]
     },
@@ -154,12 +155,7 @@
     "commandLineSyntax = 'rm interim.pdf'\n",
     "\n",
     "os.system(commandLineSyntax)\n",
-    "\n",
-    "### Export this notebook as markdown\n",
-    "commandLineSyntax = 'ipython nbconvert --to markdown 20151008_OpenGeo_Reuse_under_licence.ipynb'\n",
-    "print (commandLineSyntax)\n",
-    "\n",
-    "os.system(commandLineSyntax)\n"
+    "\n"
    ]
   },
   {
@@ -719,13 +715,16 @@
       "/home/arb/LocalPython/Anaconda27/anaconda/lib/python2.7/site-packages/IPython/nbconvert.py:13: ShimWarning: The `IPython.nbconvert` package has been deprecated. You should import from ipython_nbconvert instead.\n",
       "  \"You should import from ipython_nbconvert instead.\", ShimWarning)\n",
       "[NbConvertApp] Converting notebook 20151008_OpenGeo_Reuse_under_licence.ipynb to slides\n",
-      "[NbConvertApp] Writing 257738 bytes to 20151008_OpenGeo_Reuse_under_licence.slides.html\n",
+      "[NbConvertApp] Writing 260255 bytes to 20151008_OpenGeo_Reuse_under_licence.slides.html\n",
       "[NbConvertApp] Redirecting reveal.js requests to https://cdn.jsdelivr.net/reveal.js/2.6.2\n",
       "Serving your slides at http://127.0.0.1:8000/20151008_OpenGeo_Reuse_under_licence.slides.html\n",
       "Use Control-C to stop this server\n",
       "Created new window in existing browser session.\n",
-      "WARNING:tornado.access:404 GET /custom.css (127.0.0.1) 2.68ms\n",
-      "WARNING:tornado.access:404 GET /favicon.ico (127.0.0.1) 0.96ms\n"
+      "WARNING:tornado.access:404 GET /custom.css (127.0.0.1) 3.76ms\n",
+      "WARNING:tornado.access:404 GET /favicon.ico (127.0.0.1) 0.84ms\n",
+      "WARNING:tornado.access:404 GET /favicon.ico (127.0.0.1) 0.97ms\n",
+      "WARNING:tornado.access:404 GET /favicon.ico (127.0.0.1) 0.84ms\n",
+      "WARNING:tornado.access:404 GET /favicon.ico (127.0.0.1) 0.88ms\n"
      ]
     }
    ],
@@ -827,8 +826,8 @@
     "\n",
     "## About this presentation\n",
     "\n",
-    "* [Available on GitHub](https://github.com/AntArch/Presentations_Github/tree/master/20150916_OGC_Reuse_under_licence) - https://github.com/AntArch/Presentations_Github/\n",
-    "* [Fully referenced PDF](https://github.com/AntArch/Presentations_Github/blob/master/20150916_OGC_Reuse_under_licence/20150916_OGC_Reuse_under_licence.pdf)\n"
+    "* [Available on GitHub](https://github.com/AntArch/Presentations_Github/tree/master/20151008_OpenGeo_Reuse_under_licence) - https://github.com/AntArch/Presentations_Github/\n",
+    "* [Fully referenced PDF](https://github.com/AntArch/Presentations_Github/blob/master/20150916_OGC_Reuse_under_licence/20151008_OpenGeo_Reuse_under_licence.pdf)\n"
    ]
   },
   {
@@ -1222,7 +1221,7 @@
     }
    },
    "source": [
-    "![The modern data landscape (restricted)](https://dl.dropboxusercontent.com/u/393477/ImageBank/ForOGC/Re-UseUnderLicence.png)"
+    "![The modern data landscape (restricted)](https://dl.dropboxusercontent.com/u/393477/ImageBank/ForOGC/20151008_Re-UseUnderLicence.png)"
    ]
   },
   {
@@ -1779,6 +1778,8 @@
    },
    "source": [
     "# Questions\n",
+    "\n",
+    "In terms of discussion I'm interested in how these issues affect you.........\n",
     "\n",
     "![Processing transparency between open and closed systems](https://upload.wikimedia.org/wikipedia/commons/thumb/d/d5/Processing_transparency_between_open_and_closed_systems.svg/630px-Processing_transparency_between_open_and_closed_systems.svg.png)"
    ]
