--- a/20151008_OpenGeo_Reuse_under_licence/20151008_OpenGeo_Reuse_under_licence.ipynb
+++ b/20151008_OpenGeo_Reuse_under_licence/20151008_OpenGeo_Reuse_under_licence.ipynb
@@ -715,16 +715,20 @@
       "/home/arb/LocalPython/Anaconda27/anaconda/lib/python2.7/site-packages/IPython/nbconvert.py:13: ShimWarning: The `IPython.nbconvert` package has been deprecated. You should import from ipython_nbconvert instead.\n",
       "  \"You should import from ipython_nbconvert instead.\", ShimWarning)\n",
       "[NbConvertApp] Converting notebook 20151008_OpenGeo_Reuse_under_licence.ipynb to slides\n",
-      "[NbConvertApp] Writing 260255 bytes to 20151008_OpenGeo_Reuse_under_licence.slides.html\n",
+      "[NbConvertApp] Writing 257994 bytes to 20151008_OpenGeo_Reuse_under_licence.slides.html\n",
       "[NbConvertApp] Redirecting reveal.js requests to https://cdn.jsdelivr.net/reveal.js/2.6.2\n",
       "Serving your slides at http://127.0.0.1:8000/20151008_OpenGeo_Reuse_under_licence.slides.html\n",
       "Use Control-C to stop this server\n",
       "Created new window in existing browser session.\n",
-      "WARNING:tornado.access:404 GET /custom.css (127.0.0.1) 3.76ms\n",
-      "WARNING:tornado.access:404 GET /favicon.ico (127.0.0.1) 0.84ms\n",
-      "WARNING:tornado.access:404 GET /favicon.ico (127.0.0.1) 0.97ms\n",
-      "WARNING:tornado.access:404 GET /favicon.ico (127.0.0.1) 0.84ms\n",
-      "WARNING:tornado.access:404 GET /favicon.ico (127.0.0.1) 0.88ms\n"
+      "WARNING:tornado.access:404 GET /custom.css (127.0.0.1) 3.88ms\n",
+      "WARNING:tornado.access:404 GET /favicon.ico (127.0.0.1) 1.86ms\n",
+      "WARNING:tornado.access:404 GET /favicon.ico (127.0.0.1) 0.83ms\n",
+      "WARNING:tornado.access:404 GET /favicon.ico (127.0.0.1) 0.88ms\n",
+      "WARNING:tornado.access:404 GET /favicon.ico (127.0.0.1) 0.92ms\n",
+      "WARNING:tornado.access:404 GET /custom.css (127.0.0.1) 1.01ms\n",
+      "WARNING:tornado.access:404 GET /style.min.css.map (127.0.0.1) 1.37ms\n",
+      "WARNING:tornado.access:404 GET /style.min.css.map (127.0.0.1) 0.92ms\n",
+      "WARNING:tornado.access:404 GET /custom.css (127.0.0.1) 1.11ms\n"
      ]
     }
    ],
@@ -861,7 +865,7 @@
     }
    },
    "source": [
-    "## In the beginning was the geoword"
+    "## In the beginning was the geoword\n"
    ]
   },
   {
@@ -872,7 +876,7 @@
     }
    },
    "source": [
-    "and the word was ***cartography***"
+    "and the word was ***cartography***\n"
    ]
   },
   {
@@ -1169,7 +1173,29 @@
     }
    },
    "source": [
-    "# What about non-technical interoperability issues?\n"
+    "# So where are these new data products?\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "source": [
+    "\\newpage"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Non-technical interoperability issues?\n"
    ]
   },
   {
@@ -1255,6 +1281,24 @@
     }
    },
    "source": [
+    "## What is a licence?\n",
+    "\n",
+    "[Wikipedia state:](https://en.wikipedia.org/wiki/License)\n",
+    "\n",
+    "> A license may be granted by a party (\"licensor\") to another party (\"licensee\") as an element of an agreement between those parties. \n",
+    "\n",
+    "> A shorthand definition of a license is \"an authorization (by the licensor) to use the licensed material (by the licensee).\"\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
     "![Some licences @rdflicense_2015](https://dl.dropboxusercontent.com/u/393477/ImageBank/ForOGC/SomeLicences_FromRDFLicences.png)"
    ]
   },
@@ -1278,24 +1322,6 @@
    },
    "source": [
     "\\newpage"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
-    "## What is a licence?\n",
-    "\n",
-    "[Wikipedia state:](https://en.wikipedia.org/wiki/License)\n",
-    "\n",
-    "> A license may be granted by a party (\"licensor\") to another party (\"licensee\") as an element of an agreement between those parties. \n",
-    "\n",
-    "> A shorthand definition of a license is \"an authorization (by the licensor) to use the licensed material (by the licensee).\"\n",
-    "\n"
    ]
   },
   {
