--- a/20150916_OGC_Reuse_under_licence/20150916_OGC_Reuse_under_licence.ipynb
+++ b/20150916_OGC_Reuse_under_licence/20150916_OGC_Reuse_under_licence.ipynb
@@ -87,7 +87,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.YouTubeVideo at 0x7f13c80794d0>"
+       "<IPython.lib.display.YouTubeVideo at 0x7f6ef00969b0>"
       ]
      },
      "execution_count": 1,
@@ -204,6 +204,14 @@
      "text": [
       "Installed watermark.py. To use it, type:\n",
       "  %load_ext watermark\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/arb/LocalInstalls/anaconda3/lib/python3.5/site-packages/IPython/core/magics/extension.py:47: UserWarning: %install_ext` is deprecated, please distribute your extension(s)as a python packages.\n",
+      "  \"as a python packages.\", UserWarning)\n"
      ]
     }
    ],
@@ -710,18 +718,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/arb/LocalPython/Anaconda27/anaconda/lib/python2.7/site-packages/IPython/nbconvert.py:13: ShimWarning: The `IPython.nbconvert` package has been deprecated. You should import from ipython_nbconvert instead.\n",
-      "  \"You should import from ipython_nbconvert instead.\", ShimWarning)\n",
       "[NbConvertApp] Converting notebook 20150916_OGC_Reuse_under_licence.ipynb to slides\n",
-      "[NbConvertApp] Writing 257789 bytes to 20150916_OGC_Reuse_under_licence.slides.html\n",
-      "[NbConvertApp] Redirecting reveal.js requests to https://cdn.jsdelivr.net/reveal.js/2.6.2\n",
+      "[NbConvertApp] Writing 249258 bytes to 20150916_OGC_Reuse_under_licence.slides.html\n",
+      "[NbConvertApp] Redirecting reveal.js requests to https://cdnjs.cloudflare.com/ajax/libs/reveal.js/3.1.0\n",
       "Serving your slides at http://127.0.0.1:8000/20150916_OGC_Reuse_under_licence.slides.html\n",
       "Use Control-C to stop this server\n",
       "Created new window in existing browser session.\n",
-      "WARNING:tornado.access:404 GET /custom.css (127.0.0.1) 2.09ms\n",
-      "WARNING:tornado.access:404 GET /favicon.ico (127.0.0.1) 0.97ms\n",
-      "WARNING:tornado.access:404 GET /favicon.ico (127.0.0.1) 0.95ms\n",
-      "WARNING:tornado.access:404 GET /favicon.ico (127.0.0.1) 0.91ms\n"
+      "WARNING:tornado.access:404 GET /custom.css (127.0.0.1) 0.77ms\n",
+      "WARNING:tornado.access:404 GET /favicon.ico (127.0.0.1) 0.62ms\n",
+      "WARNING:tornado.access:404 GET /favicon.ico (127.0.0.1) 0.64ms\n",
+      "WARNING:tornado.access:404 GET /favicon.ico (127.0.0.1) 0.92ms\n",
+      "WARNING:tornado.access:404 GET /favicon.ico (127.0.0.1) 0.72ms\n"
      ]
     }
    ],
@@ -1796,21 +1803,21 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.10"
+   "pygments_lexer": "ipython3",
+   "version": "3.5.0"
   }
  },
  "nbformat": 4,
