--- a/20160202_Nottingham_GIServices_Lecture3_Beck_InteroperabilitySemanticsAndOpenData/20160202_Nottingham_GIServices_Lecture3_Beck_InteroperabilitySemanticsAndOpenData.ipynb
+++ b/20160202_Nottingham_GIServices_Lecture3_Beck_InteroperabilitySemanticsAndOpenData/20160202_Nottingham_GIServices_Lecture3_Beck_InteroperabilitySemanticsAndOpenData.ipynb
@@ -684,21 +684,35 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[NbConvertApp] Converting notebook 2016_Nottingham_GIServices_Lecture3_Beck_InteroperabilitySemanticsAndOpenData.ipynb to slides\n",
-      "[NbConvertApp] Writing 292732 bytes to 2016_Nottingham_GIServices_Lecture3_Beck_InteroperabilitySemanticsAndOpenData.slides.html\n",
+      "[NbConvertApp] Converting notebook 20160202_Nottingham_GIServices_Lecture3_Beck_InteroperabilitySemanticsAndOpenData.ipynb to slides\n",
+      "[NbConvertApp] Writing 330959 bytes to 20160202_Nottingham_GIServices_Lecture3_Beck_InteroperabilitySemanticsAndOpenData.slides.html\n",
       "[NbConvertApp] Redirecting reveal.js requests to https://cdnjs.cloudflare.com/ajax/libs/reveal.js/3.1.0\n",
-      "Serving your slides at http://127.0.0.1:8000/2016_Nottingham_GIServices_Lecture3_Beck_InteroperabilitySemanticsAndOpenData.slides.html\n",
+      "Serving your slides at http://127.0.0.1:8000/20160202_Nottingham_GIServices_Lecture3_Beck_InteroperabilitySemanticsAndOpenData.slides.html\n",
       "Use Control-C to stop this server\n",
       "Created new window in existing browser session.\n",
-      "WARNING:tornado.access:404 GET /custom.css (127.0.0.1) 0.90ms\n",
-      "WARNING:tornado.access:404 GET /favicon.ico (127.0.0.1) 0.80ms\n"
+      "WARNING:tornado.access:404 GET /custom.css (127.0.0.1) 0.98ms\n",
+      "WARNING:tornado.access:404 GET /favicon.ico (127.0.0.1) 0.86ms\n",
+      "ERROR:tornado.application:Uncaught exception GET /reveal.js/plugin/notes/notes.html (127.0.0.1)\n",
+      "HTTPServerRequest(protocol='http', host='127.0.0.1:8000', method='GET', uri='/reveal.js/plugin/notes/notes.html', version='HTTP/1.1', remote_ip='127.0.0.1', headers={'Accept-Encoding': 'gzip, deflate, sdch', 'Referer': 'http://127.0.0.1:8000/20160202_Nottingham_GIServices_Lecture3_Beck_InteroperabilitySemanticsAndOpenData.slides.html', 'Accept-Language': 'en-GB,en-US;q=0.8,en;q=0.6', 'Accept': 'text/html,application/xhtml+xml,application/xml;q=0.9,image/webp,*/*;q=0.8', 'Host': '127.0.0.1:8000', 'Upgrade-Insecure-Requests': '1', 'User-Agent': 'Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/48.0.2564.97 Safari/537.36', 'Connection': 'keep-alive'})\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/home/arb/LocalInstalls/anaconda3/lib/python3.5/site-packages/tornado/web.py\", line 1401, in _stack_context_handle_exception\n",
+      "    raise_exc_info((type, value, traceback))\n",
+      "  File \"<string>\", line 3, in raise_exc_info\n",
+      "  File \"/home/arb/LocalInstalls/anaconda3/lib/python3.5/site-packages/tornado/stack_context.py\", line 314, in wrapped\n",
+      "    ret = fn(*args, **kwargs)\n",
+      "  File \"/home/arb/LocalInstalls/anaconda3/lib/python3.5/site-packages/nbconvert/postprocessors/serve.py\", line 31, in finish_get\n",
+      "    response.rethrow()\n",
+      "  File \"/home/arb/LocalInstalls/anaconda3/lib/python3.5/site-packages/tornado/httpclient.py\", line 583, in rethrow\n",
+      "    raise self.error\n",
+      "tornado.httpclient.HTTPError: HTTP 403: Forbidden\n",
+      "ERROR:tornado.access:500 GET /reveal.js/plugin/notes/notes.html (127.0.0.1) 480.47ms\n"
      ]
     }
    ],
    "source": [
     "# Notes don't show in a python3 environment\n",
     "\n",
-    "!ipython nbconvert 2016_Nottingham_GIServices_Lecture3_Beck_InteroperabilitySemanticsAndOpenData.ipynb --to slides --post serve\n",
+    "!ipython nbconvert 20160202_Nottingham_GIServices_Lecture3_Beck_InteroperabilitySemanticsAndOpenData.ipynb --to slides --post serve\n",
     "\n"
    ]
   },
@@ -797,7 +811,7 @@
     "## About this presentation\n",
     "\n",
     "* [Available on GitHub](https://github.com/AntArch/Presentations_Github/tree/master/20151008_OpenGeo_Reuse_under_licence) - https://github.com/AntArch/Presentations_Github/\n",
-    "* [Fully referenced PDF](https://github.com/AntArch/Presentations_Github/blob/master/20150916_OGC_Reuse_under_licence/20151008_OpenGeo_Reuse_under_licence.pdf)\n"
+    "* [Fully referenced PDF](https://github.com/AntArch/Presentations_Github/blob/master/20160202_Nottingham_GIServices_Lecture3_Beck_InteroperabilitySemanticsAndOpenData/20160202_Nottingham_GIServices_Lecture3_Beck_InteroperabilitySemanticsAndOpenData.pdf)\n"
    ]
   },
   {
@@ -1216,21 +1230,6 @@
     "@wikipedia_interoperability_2016\n",
     "\n",
     "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
-    "[The Defense domain are a bit more explicit......](http://www.dau.mil/pubscats/atl%20docs/jan-feb/watson_jan-feb10.pdf)\n",
-    "\n",
-    "> As defined by DoD policy, interoperability is the ability of systems, units, or forces to provide data, information, material, and services to, and accept the same from, other systems, units, or forces; and to use the data, information, material, and services so exchanged to enable them to operate effectively together. IT and NSS interoperability includes both the technical exchange of information and the end-to-end operational effectiveness of that exchanged information as required for mission accomplishment. Interoperability is more than just information exchange; it includes systems, processes, procedures, organizations, and missions over the life cycle and must be balanced with information assurance.\n",
-    "\n",
-    "@watson_joint_2010"
    ]
   },
   {
@@ -2009,7 +2008,7 @@
    ],
    "source": [
     "from IPython.display import IFrame\n",
-    "IFrame('http://www.osgeo.org/', width=1000, height=700)"
+    "IFrame('http://www.osgeo.org/', width=1200, height=700)"
    ]
   },
   {
@@ -2050,6 +2049,34 @@
     "# Where are these new data products?\n",
     "\n",
     "Data, data everywhere - but where are the new derivatives and services?\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "source": [
+    "\\newpage"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "# Interoperability\n",
+    "\n",
+    "[The Defense domain are a bit more explicit......](http://www.dau.mil/pubscats/atl%20docs/jan-feb/watson_jan-feb10.pdf)\n",
+    "\n",
+    "> As defined by DoD policy, interoperability is the ability of systems, units, or forces to provide data, information, material, and services to, and accept the same from, other systems, units, or forces; and to use the data, information, material, and services so exchanged to enable them to operate effectively together. IT and NSS interoperability includes both the technical exchange of information and the end-to-end operational effectiveness of that exchanged information as required for mission accomplishment. Interoperability is more than just information exchange; it includes systems, processes, procedures, organizations, and missions over the life cycle and must be balanced with information assurance.\n",
+    "\n",
+    "@watson_joint_2010"
    ]
   },
   {
@@ -2778,33 +2805,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "        <iframe\n",
-       "            width=\"400\"\n",
-       "            height=\"300\"\n",
-       "            src=\"https://www.youtube.com/embed/jUzGF401vLc\"\n",
-       "            frameborder=\"0\"\n",
-       "            allowfullscreen\n",
-       "        ></iframe>\n",
-       "        "
-      ],
-      "text/plain": [
-       "<IPython.lib.display.YouTubeVideo at 0x7f3ad00bc150>"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from IPython.display import YouTubeVideo\n",
     "YouTubeVideo('jUzGF401vLc')"
@@ -3147,7 +3152,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
     "## Data expressed as RDF\n",
     "\n",
@@ -3301,7 +3310,10 @@
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "subslide"
+    }
    },
    "outputs": [
     {
@@ -3390,7 +3402,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
     "### Ontology\n",
     "\n",
@@ -3471,7 +3487,7 @@
     "'Ching Ching' is a Cub.\n",
     "```\n",
     "\n",
-    "In an ontology you can say *Anything about Anything*. Whilst carnivore is a generally useful concept about *bears* it is not *specifically* useful when considering *pandas*. The domain of application is clearly important. "
+    "In an ontology/RDF you can say *Anything about Anything*. Whilst carnivore is a generally useful concept about *bears* it is not *specifically* useful when considering *pandas*. **The domain of application is clearly important.** "
    ]
   },
   {
@@ -3568,7 +3584,10 @@
    "cell_type": "code",
    "execution_count": 19,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "subslide"
+    }
    },
    "outputs": [
     {
@@ -3599,12 +3618,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "slide"
+    }
    },
-   "outputs": [],
    "source": [
     "# Linked Data and Geo\n",
     "\n"
@@ -3898,15 +3918,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true,
     "slideshow": {
      "slide_type": "subslide"
     }
    },
-   "outputs": [],
    "source": [
     "## Open Street Map\n",
     "\n"
@@ -4257,7 +4275,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "slide"
     }
    },
    "source": [
